# online-store

./: pyproject.toml
myproject/catalog/: admin.py  models.py  urls.py  views.py
myproject/myproject/: settings.py  urls.py
