[tool.poetry]
name = "online-store"
version = "0.1.0"
description = ""
authors = ["lija_lyfe <lija6556@list.ru>"]
readme = "README.md"
packages = [{include = "online_store"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
